--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,51 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 /.venv
+venv/
+ENV/
+env/
+
+# Output directories - may contain client data
+outputs/
+run_*/
+images/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Sensitive files
+*.env
+*.key
+*.pem
+*.p12
+
+# Build artifacts
+*.spec
+document_converter.spec
