--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,19 +20,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       
-      - name: Scan for secrets
+      - name: Scan for secrets with TruffleHog
         uses: trufflesecurity/trufflehog@main
         with:
-          path: ./pwa
+          path: ./
           base: ${{ github.event.repository.default_branch }}
           head: HEAD
+          extra_args: --only-verified
+        continue-on-error: true
       
       - name: Scan for API keys and tokens
         run: |
           echo "Scanning for potential secrets..."
           # Search for common secret patterns
-          if grep -rE "(api[_-]?key|secret|password|token|private[_-]?key|credential)" --include="*.js" --include="*.html" --include="*.json" ./pwa/; then
+          if grep -rE "(api[_-]?key|secret|password|token|private[_-]?key|credential)" --include="*.js" --include="*.html" --include="*.json" ./pwa/ 2>/dev/null; then
             echo "❌ WARNING: Potential secrets found in code"
             exit 1
           fi
@@ -41,7 +45,7 @@ jobs:
       - name: Check for sensitive file patterns
         run: |
           echo "Checking for sensitive files..."
-          if find ./pwa -name "*.env*" -o -name "*secret*" -o -name "*password*" -o -name "*.pem" -o -name "*.key" | grep -q .; then
+          if find ./pwa -name "*.env*" -o -name "*secret*" -o -name "*password*" -o -name "*.pem" -o -name "*.key" 2>/dev/null | grep -q .; then
             echo "❌ WARNING: Sensitive files detected"
             exit 1
           fi
@@ -50,7 +54,7 @@ jobs:
       - name: Validate PWA has no backend calls
         run: |
           echo "Scanning for backend/server connections..."
-          if grep -rE "(fetch\(|XMLHttpRequest|\.post\(|\.get\(|axios)" --include="*.js" ./pwa/ | grep -vE "(localhost|127\.0\.0\.1|cdn\.|jsdelivr\.net)"; then
+          if grep -rE "(fetch\(|XMLHttpRequest|\.post\(|\.get\(|axios)" --include="*.js" ./pwa/ 2>/dev/null | grep -vE "(localhost|127\.0\.0\.1|cdn\.|jsdelivr\.net)"; then
             echo "⚠️  External API calls detected - verify these are intentional"
           fi
           echo "✅ Security scan complete"
