Fix TruffleHog install to tagged release

--- a/.github/workflows/secrets-trufflehog.yml
+++ b/.github/workflows/secrets-trufflehog.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install TruffleHog
         run: |
-          pip install "trufflehog==3.79.0"
+          pip install "git+https://github.com/trufflesecurity/trufflehog@v3.79.0"
           trufflehog --version
 
       - name: Run TruffleHog (git history)
