Pin TruffleHog workflow install to tarball

--- a/.github/workflows/secrets-trufflehog.yml
+++ b/.github/workflows/secrets-trufflehog.yml
@@ -22,11 +22,11 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
+          python-version: "3.12"
 
       - name: Install TruffleHog
         run: |
-          pip install "git+https://github.com/trufflesecurity/trufflehog@v3.79.0"
+          pip install "https://github.com/trufflesecurity/trufflehog/archive/refs/tags/v3.79.0.tar.gz"
           trufflehog --version
 
       - name: Run TruffleHog (git history)
