--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,16 +40,13 @@ jobs:
           fi
 
       - name: Scan for secrets with TruffleHog
-        uses: trufflesecurity/trufflehog@main
+        uses: trufflesecurity/trufflehog@v3
         with:
           path: ./
           base: ${{ steps.trufflehog-base.outputs.base_sha }}
           head: ${{ github.sha }}
-          base: ${{ github.event.repository.default_branch }}
-          head: HEAD
           # Allowlist minified vendor bundles that trigger false positives (e.g., Mermaid)
           extra_args: --only-verified --exclude-paths .trufflehogignore
-        continue-on-error: true
 
       - name: Scan for API keys and tokens
         run: |
