--- a/.github/workflows/secrets-trufflehog.yml
+++ b/.github/workflows/secrets-trufflehog.yml
@@ -19,14 +19,9 @@ jobs:
         with:
           fetch-depth: 0  # full history to allow diff scanning
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-
       - name: Install TruffleHog
         run: |
-          pip install "https://github.com/trufflesecurity/trufflehog/archive/refs/tags/v3.79.0.tar.gz"
+          curl -sSfL https://raw.githubusercontent.com/trufflesecurity/trufflehog/main/scripts/install.sh | sh -s -- -b /usr/local/bin v3.82.13
           trufflehog --version
 
       - name: Run TruffleHog (git history)
