--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,11 @@ jobs:
         with:
           fetch-depth: 0
       
+      - name: Install TruffleHog
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/trufflesecurity/trufflehog/main/scripts/install.sh | sh -s -- -b /usr/local/bin v3.82.13
+          trufflehog --version
+
       - name: Select TruffleHog base ref
         id: trufflehog-base
         run: |
@@ -40,13 +45,18 @@ jobs:
           fi
 
       - name: Scan for secrets with TruffleHog
-        uses: trufflesecurity/trufflehog@v3
-        with:
-          path: ./
-          base: ${{ steps.trufflehog-base.outputs.base_sha }}
-          head: ${{ github.sha }}
-          # Allowlist minified vendor bundles that trigger false positives (e.g., Mermaid)
-          extra_args: --only-verified --exclude-paths .trufflehogignore
+        run: |
+          BASE_SHA="${{ steps.trufflehog-base.outputs.base_sha }}"
+          if [ -n "$BASE_SHA" ]; then
+            trufflehog git file://. \
+              --since-commit="$BASE_SHA" \
+              --branch=HEAD \
+              --only-verified \
+              --exclude-paths .trufflehogignore \
+              --fail
+          else
+            echo "Skipping TruffleHog diff scan (no base commit)"
+          fi
 
       - name: Scan for API keys and tokens
         run: |
